<resources>
    <string name="app_name">BBDD</string>
    <string name="txt_Codigo">Codigo del producto</string>
    <string name="txt_Descripcion">Descripcion del producto</string>
    <string name="txt_Precio">Precio del producto</string>
    <string name="BotonRegistro">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
</resources>